Add  text-overflow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis
         ipsum officia numquam expedita ullam.
       </h2>
-      <a href="#" class="red-more">red more</a>
+      <a href="#" class="red-more">read more</a>
     </section>
     <section class="section">
       <article class="article-one">
