--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" class="red-more">read more</a>
     </section>
     <section class="section">
-      <article class="article-one">
+      <article class="article">
         <h3 class="header-article-one">Lorem, ipsum dolor.</h3>
         <p class="header-article-one">
           <!--Класс убрать если нужен отступ мкжду заголовком и статьёй-->
@@ -33,7 +33,7 @@
           quae.
         </p>
       </article>
-      <article class="article-two">
+      <article class="article article-bgc">
         <h3 class="header-article-two">Lorem, ipsum dolor.</h3>
         <p class="header-article-one">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus
@@ -51,7 +51,7 @@
         </p>
       </article>
     </section>
-    <section class="">
+    <section>
       <article class="inline">
         <h3 class="header-article">Lorem, ipsum dolor.</h3>
         <p class="text">
